--- a/static/css/chatStyles.css
+++ b/static/css/chatStyles.css
@@ -53,8 +53,13 @@ p {
     margin-top: -0.7em;
 }
 
+#model-description {
+    margin-top: 1em;
+}
+
 main {
     margin: 0 auto;
+    width: 60%;
     display: flex;
     flex-direction: column;
     align-items: center;
