Imports problem fixed, new CastError

--- a/views/chat.pug
+++ b/views/chat.pug
@@ -42,4 +42,4 @@ html(lang="en")
                 input(type="text", id="user-input", autocomplete="off", name="message", placeholder="Send message...")
                 button(id="submit-button")
                     i.fas.fa-arrow-up
-        script(src="/js/updateChat.js")
+        script(type="module", src="/js/updateChat.js")
