authentication with jwt

--- a/views/main.pug
+++ b/views/main.pug
@@ -13,7 +13,7 @@ html(lang="en")
                 img(src="/img/mainIcon.jpg", alt="")
                 p SpoiledGPT
         main
-            h1 Welcome!
+            h1 Welcome, #{username}
             #new-chat
                 input(type="text", id="main-user-input", autocomplete="off", name="message", placeholder="Start new chat...")
                 button(id="main-start-button")
