--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -7,20 +7,14 @@ html(lang="en")
     title Login
     body
         #title
-        if username
-            h1 Hello, #{username}
-        else
-            h1 Hello
+            h1 Welcome to SpoiledGPT
         #myForm
-            if !username
-                span#error-textInput.error-message
-                label Please, enter your username to login
-                input(type="text", id="textInput", placeholder="username")
+            span#error-textInput.error-message
+            label Please, enter your username to login
+            input(type="text", id="textInput", placeholder="username")
             span#error-passwordInput.error-message
             label Please, enter your password to login
             input(type="password", id="passwordInput", placeholder="password")
             button#submit Submit
             div#results
-        script.
-            window.username = "#{username}";
         script(src="/js/authScripts/login.js")
